--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "template",
-  "version": "0.0.0",
+  "name": "aura",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^5.1.1",
+    "beepbeep": "^1.2.0",
     "browser-sync": "^2.8.2",
     "css-mqpacker": "^3.1.0",
     "csswring": "^3.0.5",
