--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "bootstrap": "~3.3.7",
     "parallax.js": "^1.4.2"
+  },
+  "dependencies": {
+    "owl-carousel": "^1.3.2"
   }
 }
