--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": [
 	    "./dist/css/origin.css",
-	    "./dist/js/origin.js",
+	    "./dist/js/origin.js"
 	],
     "moduleType": [],
     "license": "MIT",
