--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "origin",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "",
     "main": [
 	    "./dist/css/origin.css",
@@ -17,7 +17,7 @@
         "test",
         "tests"
     ],
-    "dependencies": {
+    "devDependencies": {
         "owl-carousel": "^1.3.2",
         "bootstrap": "~3.3.7",
         "parallax.js": "^1.4.2"
